添加 transmittable-thread-local 解决， 多线程传递数据的问题！ -javaagent:/opt/transmittable-thread-local-2.14.2.jar

--- a/grpc-client/src/main/resources/application.yml
+++ b/grpc-client/src/main/resources/application.yml
@@ -4,7 +4,8 @@ server:
 spring:
   application:
     name: grpc-client
-
+  profiles:
+    include: resilience4j
 
   cloud:
     consul:
@@ -13,30 +14,6 @@ spring:
       discovery:
         prefer-ip-address: true
 
-
-
-resilience4j.circuitbreaker:
-  configs:
-    default:
-      slidingWindowSize: 100
-      permittedNumberOfCallsInHalfOpenState: 10
-      waitDurationInOpenState: 10000
-      failureRateThreshold: 60
-      eventConsumerBufferSize: 10
-      registerHealthIndicator: true
-    someShared:
-      slidingWindowSize: 50
-      permittedNumberOfCallsInHalfOpenState: 10
-  instances:
-    sayHello:
-      baseConfig: default
-      waitDurationInOpenState: 5000
-    backendB:
-      baseConfig: someShared
-
-
-
-
 # Grpc配置
 grpc:
   client:
@@ -44,8 +21,6 @@ grpc:
       negotiation-type: plaintext
       enable-keep-alive: true
       keep-alive-without-calls: true
-
-
 
 info:
   app:
