--- a/grpc-client/pom.xml
+++ b/grpc-client/pom.xml
@@ -36,6 +36,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
     </dependencies>
 
 
