--- a/grpc-lib/pom.xml
+++ b/grpc-lib/pom.xml
@@ -42,9 +42,22 @@
             <version>${protobuf-java-util.version}</version>
         </dependency>
 
+        <!-- 使用 @CircuitBreaker , @RateLimiter , @Bulkhead , @Retry , @TimeLimiter
+            等，注解 必须添加 spring-boot-starter-aop 依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.14.2</version>
         </dependency>
 
         <dependency>
