添加 java agent transmittable-thread-local

--- a/grpc-lib/pom.xml
+++ b/grpc-lib/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
-            <version>2.14.2</version>
+            <version>${transmittable.version}</version>
         </dependency>
 
         <dependency>
