--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
 
         <hutool.version>5.8.9</hutool.version>
 
+        <transmittable.version>2.14.2</transmittable.version>
+
         <devh-grpc.version>2.13.1.RELEASE</devh-grpc.version>
 
         <spring-boot.version>2.5.14</spring-boot.version>
