--- a/grpc-client/src/main/resources/config/application-resilience4j.yml
+++ b/grpc-client/src/main/resources/config/application-resilience4j.yml
@@ -1,3 +1,4 @@
+## 断路器 配置
 resilience4j.circuitbreaker:
   circuit-breaker-aspect-order: 1
   configs:
@@ -9,6 +10,7 @@ resilience4j.circuitbreaker:
       permittedNumberOfCallsInHalfOpenState: 3
       automaticTransitionFromOpenToHalfOpenEnabled: true
       waitDurationInOpenState: 2s
+      slow-call-duration-threshold: 2s
       failureRateThreshold: 30
       eventConsumerBufferSize: 10
       recordExceptions:
@@ -18,12 +20,22 @@ resilience4j.circuitbreaker:
         - java.io.IOException
 
 
-
-resilience4j.retry:
-  retry-aspect-order: 2
+## 超时配置
+resilience4j.timelimiter:
+  time-limiter-aspect-order: 2
   configs:
     default:
-      maxRetryAttempts: 2
+      timeout-duration: 1s
+      cancel-running-future: true
+
+
+
+## 重试配置
+resilience4j.retry:
+  retry-aspect-order: 3
+  configs:
+    default:
+      max-attempts: 2
       waitDuration: 100
       retryExceptions:
         - org.springframework.web.client.HttpServerErrorException
@@ -32,22 +44,10 @@ resilience4j.retry:
         - java.io.IOException
 
 
-resilience4j.bulkhead:
-  configs:
-    default:
-      maxConcurrentCalls: 100
 
-
-resilience4j.thread-pool-bulkhead:
-  configs:
-    default:
-      maxThreadPoolSize: 4
-      coreThreadPoolSize: 2
-      queueCapacity: 2
-
-
+## 限流配置
 resilience4j.ratelimiter:
-  rate-limiter-aspect-order: 5
+  rate-limiter-aspect-order: 4
   configs:
     default:
       registerHealthIndicator: false
@@ -55,3 +55,19 @@ resilience4j.ratelimiter:
       limitRefreshPeriod: 1s
       timeoutDuration: 0
       eventConsumerBufferSize: 100
+
+
+## 舱壁配置
+resilience4j.bulkhead:
+  configs:
+    default:
+      maxConcurrentCalls: 100
+
+
+## 舱壁线程池配置
+resilience4j.thread-pool-bulkhead:
+  configs:
+    default:
+      maxThreadPoolSize: 4
+      coreThreadPoolSize: 2
+      queueCapacity: 2
