添加 config.proto 文件和接口

--- a/grpc-client/src/main/resources/application.yml
+++ b/grpc-client/src/main/resources/application.yml
@@ -25,6 +25,11 @@ grpc:
       negotiation-type: plaintext
       enable-keep-alive: true
       keep-alive-without-calls: true
+    grpc-demo1:
+      address: static://localhost:5016
+      negotiation-type: plaintext
+      enable-keep-alive: true
+      keep-alive-without-calls: true
 
 
 info:
