--- a/grpc-lib/pom.xml
+++ b/grpc-lib/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+
         <!-- Spring Cloud LoadBalancer Cache Caffeine -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
@@ -60,25 +65,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jdk8</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-protobuf</artifactId>
-            <version>2.12.6</version>
+            <version>${protobuf-jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.msgpack</groupId>
             <artifactId>jackson-dataformat-msgpack</artifactId>
-            <version>0.9.3</version>
+            <version>${msgpack.version}</version>
         </dependency>
 
     </dependencies>
