--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <maven-compiler.version>3.8.1</maven-compiler.version>
+        <maven-compiler.version>3.10.1</maven-compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -32,10 +32,10 @@
         <grpc.version>1.42.2</grpc.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
         <protobuf-java-util.version>3.21.8</protobuf-java-util.version>
+        <protobuf-jackson.version>2.12.6</protobuf-jackson.version>
 
         <hutool.version>5.8.9</hutool.version>
-
-        <transmittable.version>2.14.2</transmittable.version>
+        <msgpack.version>0.9.3</msgpack.version>
 
         <devh-grpc.version>2.13.1.RELEASE</devh-grpc.version>
 
