升级 spring boot 2.6

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <modules>
         <module>grpc-lib</module>
         <module>grpc-server</module>
-        <module>grpc-server-2</module>
         <module>grpc-client</module>
     </modules>
 
@@ -28,27 +27,24 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <os.plugin.version>1.7.1</os.plugin.version>
-        <protoc.version>3.6.1</protoc.version>
-        <grpc.version>1.42.2</grpc.version>
+        <grpc.version>1.51.0</grpc.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-        <protobuf-java-util.version>3.21.8</protobuf-java-util.version>
+        <protobuf.version>3.21.9</protobuf.version>
 
-        <hutool.version>5.8.9</hutool.version>
+        <hutool.version>5.8.10</hutool.version>
 
         <transmittable.version>2.14.2</transmittable.version>
 
-        <devh-grpc.version>2.13.1.RELEASE</devh-grpc.version>
-
-        <spring-boot.version>2.5.14</spring-boot.version>
-        <spring-cloud.version>2020.0.5</spring-cloud.version>
+        <devh-grpc.version>2.14.0.RELEASE</devh-grpc.version>
+        <spring-boot.version>2.6.13</spring-boot.version>
+        <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>${hutool.version}</version>
+            <artifactId>hutool-core</artifactId>
         </dependency>
 
         <dependency>
@@ -108,6 +104,13 @@
                 <groupId>io.grpc</groupId>
                 <artifactId>grpc-bom</artifactId>
                 <version>${grpc.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-bom</artifactId>
+                <version>${protobuf.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
