--- a/grpc-lib/pom.xml
+++ b/grpc-lib/pom.xml
@@ -33,7 +33,6 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
-            <version>${protobuf-java-util.version}</version>
         </dependency>
 
         <!-- 使用 @CircuitBreaker , @RateLimiter , @Bulkhead , @Retry , @TimeLimiter
@@ -48,6 +47,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+
         <!-- Spring Cloud LoadBalancer Cache Caffeine -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
@@ -60,19 +64,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jdk8</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-protobuf</artifactId>
-            <version>2.12.6</version>
+            <version>2.13.4</version>
         </dependency>
 
         <dependency>
@@ -98,7 +92,7 @@
                 <version>${protobuf.plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
+                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
@@ -114,12 +108,12 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <!--在执行mvn compile的时候会执行以下操作-->
+                        <!--在执行 mvn compile 的时候会执行以下操作-->
                         <phase>compile</phase>
                         <goals>
-                            <!--生成OuterClass类-->
+                            <!--生成 OuterClass 类-->
                             <goal>compile</goal>
-                            <!--生成Grpc类-->
+                            <!--生成 Grpc 类-->
                             <goal>compile-custom</goal>
                         </goals>
                     </execution>
