--- a/pom.xml
+++ b/pom.xml
@@ -19,25 +19,24 @@
     </modules>
 
     <properties>
-        <java.version>11</java.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven-compiler.version>3.10.1</maven-compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <os.plugin.version>1.7.1</os.plugin.version>
+        <grpc.version>1.59.1</grpc.version>
+        <protobuf.version>3.25.1</protobuf.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-        <grpc.version>1.51.0</grpc.version>
-        <jackson.version>2.13.4</jackson.version>
-        <msgpack.version>0.9.3</msgpack.version>
-        <protobuf.version>3.21.9</protobuf.version>
 
+        <msgpack.version>0.9.6</msgpack.version>
         <hutool.version>5.8.10</hutool.version>
 
-        <devh-grpc.version>2.14.0.RELEASE</devh-grpc.version>
-        <spring-boot.version>2.6.13</spring-boot.version>
-        <spring-cloud.version>2021.0.5</spring-cloud.version>
+        <devh-grpc.version>2.15.0.RELEASE</devh-grpc.version>
+        <spring-boot.version>3.1.6</spring-boot.version>
+        <spring-cloud.version>2022.0.4</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -45,6 +44,11 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
         </dependency>
 
         <dependency>
@@ -124,6 +128,16 @@
             <dependency>
                 <groupId>net.devh</groupId>
                 <artifactId>grpc-spring-boot-starter</artifactId>
+                <version>${devh-grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${devh-grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
                 <version>${devh-grpc.version}</version>
             </dependency>
         </dependencies>
