--- a/pom.xml
+++ b/pom.xml
@@ -22,20 +22,21 @@
         <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <maven-compiler.version>3.10.1</maven-compiler.version>
+        <maven-compiler.version>3.12.1</maven-compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <os.plugin.version>1.7.1</os.plugin.version>
-        <grpc.version>1.59.1</grpc.version>
+        <grpc.version>1.60.1</grpc.version>
         <protobuf.version>3.25.1</protobuf.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
+        <javax-ann-api.version>1.3.2</javax-ann-api.version>
 
         <msgpack.version>0.9.6</msgpack.version>
         <hutool.version>5.8.10</hutool.version>
 
         <devh-grpc.version>2.15.0.RELEASE</devh-grpc.version>
-        <spring-boot.version>3.1.6</spring-boot.version>
+        <spring-boot.version>3.1.7</spring-boot.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
     </properties>
 
@@ -117,6 +118,11 @@
                 <version>${protobuf.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax-ann-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
