--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 
         <os.plugin.version>1.7.1</os.plugin.version>
         <grpc.version>1.60.1</grpc.version>
+        <reactive.grpc.version>1.2.4</reactive.grpc.version>
         <protobuf.version>3.25.1</protobuf.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
         <javax-ann-api.version>1.3.2</javax-ann-api.version>
@@ -45,11 +46,6 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-crypto</artifactId>
         </dependency>
 
         <dependency>
@@ -130,6 +126,11 @@
                 <version>${hutool.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.salesforce.servicelibs</groupId>
+                <artifactId>reactor-grpc-stub</artifactId>
+                <version>${reactive.grpc.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.devh</groupId>
