--- a/grpc-server/src/main/resources/application.yml
+++ b/grpc-server/src/main/resources/application.yml
@@ -1,14 +1,16 @@
 server:
-  port: 18010
+  port: ${HTTP_SERVER_PORT:18010}
 
 grpc:
   server:
-    port: 18011
+    port: ${GRPC_SERVER_PORT:18011}
 
 spring:
   application:
     name: grpc-server
-
+  threads:
+    virtual:
+      enabled: true
   cloud:
     consul:
       host: ${REGISTER_SERVER_HOST:127.0.0.1}
